recursion.hanoi.lessons.recursion.hanoi.HanoiBoard.scala.error
HanoiBoard:9: error: not enough arguments for method hanoi: (height: Int, src: Int, other: Int, dst: Int)Unit.
Unspecified value parameter dst.
      hanoi(n - 1, src, other)
           ^HanoiBoard:11: error: not enough arguments for method hanoi: (height: Int, src: Int, other: Int, dst: Int)Unit.
Unspecified value parameter dst.
      hanoi(n - 1, other, dest)
           ^